@@ -423,11 +423,15 @@ body {
 
 <p><strong>misc.selection_rect_color</strong> | <code>color, int : Color, Alpha</code> | Color of the selection rectangle when navigating widgets without a mouse.</p>
 
+<p><strong>misc.colorblind_highlight_offset</strong> | <code>int, int : X offset, Y offset</code> | The pixel offset of the &lsquo;*&rsquo; marker on highlighted icons in colorblind mode.</p>
+
 <p><strong>tab.padding</strong> | <code>int, int : Left/right padding, Top padding</code> | The pixel padding around tabs. Controls how the left and right edges are drawn.</p>
 
 <p><strong>slot.quantity_label</strong> | <code>label</code> | Setting for the slot quantity text.</p>
 
 <p><strong>slot.quantity_bg_color</strong> | <code>color, int : Color, Alpha</code> | If a slot has a quantity, a rectangle filled with this color will be placed beneath the text.</p>
+
+<p><strong>listbox.text_margin</strong> | <code>int, int : Left margin, Right margin</code> | The pixel margin to leave on the left and right sides of listbox element text.</p>
 
 <hr />
 
