@@ -244,9 +244,11 @@ public:
 		void load();
 
 		Color selection_rect_color;
+		Point colorblind_highlight_offset;
 		Point tab_padding;
 		LabelInfo slot_quantity_label;
 		Color slot_quantity_bg_color;
+		Point listbox_text_margin;
 	};
 
 	class XPTable {
